--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/StartNewGameViewNarrow.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/StartNewGameViewNarrow.axaml
@@ -12,7 +12,9 @@
           RowDefinitions="Auto,*,Auto">
         <templatedControls:ToolBar
             Title="Start New Game"
-            TitleAlignment="Center"/>
+            TitleAlignment="Center"
+            LeftCommand="{Binding BackCommand}"
+            LeftIcon="{StaticResource BackArrowIcon}"/>
         
         <TabControl Grid.Row="1">
             <TabItem Header="Players">
