--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/JoinGame/JoinGameViewNarrow.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/JoinGame/JoinGameViewNarrow.axaml
@@ -7,14 +7,17 @@
              x:Class="Sanet.MakaMek.Avalonia.Views.JoinGame.JoinGameViewNarrow"
              x:DataType="viewModels:JoinGameViewModel"
              xmlns:viewModels="clr-namespace:Sanet.MakaMek.Presentation.ViewModels;assembly=Sanet.MakaMek.Presentation"
-             xmlns:fragments2="clr-namespace:Sanet.MakaMek.Avalonia.Views.StartNewGame.Fragments">
+             xmlns:fragments2="clr-namespace:Sanet.MakaMek.Avalonia.Views.StartNewGame.Fragments"
+             xmlns:templatedControls="clr-namespace:Sanet.MakaMek.Avalonia.Views.TemplatedControls">
 
   <DockPanel Classes="pageContainer">
-    <TextBlock Text="Join Game" 
-               Classes="h1" 
-               HorizontalAlignment="Center"
-               DockPanel.Dock="Top"
-               Margin="0,0,0,10"/>
+    <templatedControls:ToolBar
+      Title="Join Game"
+      TitleAlignment="Center"
+      LeftCommand="{Binding BackCommand}"
+      LeftIcon="{StaticResource BackArrowIcon}"
+      DockPanel.Dock="Top"
+      Margin="0,0,0,10"/>
     <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
       <StackPanel Spacing="15" Margin="10">
         <!-- Connect Fragment -->
