--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Styles/Buttons.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Styles/Buttons.axaml
@@ -117,7 +117,7 @@
         <Setter Property="Width" Value="40"/>
         <Setter Property="Height" Value="40"/>
         <Setter Property="CornerRadius" Value="20"/>
-        <Setter Property="Background" Value="{StaticResource PrimaryBrush}"/>
+        <Setter Property="Background" Value="{StaticResource SecondaryBrush}"/>
         <Setter Property="Foreground" Value="{StaticResource HighlightLightBrush}"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
