--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/TemplatedControls/GamePanel.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/TemplatedControls/GamePanel.axaml
@@ -27,15 +27,11 @@
                                      HorizontalAlignment="Center"
                                      FontWeight="Bold"
                                      Foreground="{StaticResource HighlightLightBrush}"/>
-                            <Button Command="{TemplateBinding CloseCommand}"
-                                    HorizontalAlignment="Right"
-                                    Width="40"
-                                    Height="40"
-                                    Classes="icon"
-                                    Background="Transparent">
-                                <PathIcon Data="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" 
-                                          Foreground="{StaticResource HighlightLightBrush}"/>
-                            </Button>
+                            <controls:ActionButton
+                                Command="{TemplateBinding CloseCommand}"
+                                IconData="{StaticResource CloseIcon}"
+                                HorizontalAlignment="Right"
+                                Background="Transparent"/>
                         </Grid>
                         <!-- Content -->
                         <ContentPresenter Grid.Row="1" 
