--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/EndGame/EndGameView.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/EndGame/EndGameView.axaml
@@ -33,7 +33,8 @@
                         VerticalAlignment="Stretch">
                 <ItemsControl ItemsSource="{Binding Players}">
                     <ItemsControl.ItemTemplate>
-                        <DataTemplate>
+                        <DataTemplate
+                            x:DataType="wrappers:EndGamePlayerViewModel">
                             <Border Classes="card" Margin="0,5">
                                 <Grid RowDefinitions="Auto,Auto">
                                     <!-- Player Name with Color Preview and Victory Badge -->
@@ -88,7 +89,8 @@
                                                     </ItemsPanelTemplate>
                                                 </ItemsControl.ItemsPanel>
                                                 <ItemsControl.ItemTemplate>
-                                                    <DataTemplate>
+                                                    <DataTemplate
+                                                        x:DataType="wrappers:EndGameUnitViewModel">
                                                         <StackPanel>
                                                             <controls:UnitItemControl
                                                                 DataContext="{Binding UnitData}"
