--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/WeaponSelectionPanel.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/WeaponSelectionPanel.axaml
@@ -25,7 +25,7 @@
         <Grid RowDefinitions="Auto,Auto,Auto,Auto,*"
               ColumnDefinitions="Auto,*"
               Width="300">
-            <TextBlock 
+            <TextBlock
                 Margin="10,0,0,0"
                 Grid.Column="0"
                 Grid.Row="0"
@@ -42,18 +42,48 @@
                 Grid.ColumnSpan="2"
                 Margin="10,5,10,5"
                 DataContext="{Binding HeatProjection}"/>
-            <TextBlock 
-                Margin="10,0,0,0"
-                Grid.Column="0"
+
+            <!-- Selected Target Section -->
+            <ContentControl
                 Grid.Row="2"
-                FontFamily="{StaticResource AwesomeFontSolid}" Text="&#xf05b;"/>
-            
-                
-            <TextBlock
-                    Margin="10,0,0,0"
-                    Grid.Row="2"
-                    Grid.Column="1"
-                    Text="{Binding SelectedUnit.Name}"/>
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                Margin="10,5,10,5"
+                Content="{Binding SelectedTarget}">
+                <ContentControl.DataTemplates>
+                    <DataTemplate x:DataType="wrappers:TargetSelectionViewModel">
+                        <Grid ColumnDefinitions="Auto,*,Auto">
+                            <TextBlock
+                                Grid.Column="0"
+                                Margin="0,0,5,0"
+                                FontFamily="{StaticResource AwesomeFontSolid}"
+                                Text="&#xf05b;"/>
+                            <TextBlock
+                                Grid.Column="1"
+                                Text="{Binding Name}"/>
+                            <!-- PRIMARY tag for primary target -->
+                            <Border
+                                Grid.Column="2"
+                                Classes="statusTag"
+                                IsVisible="{Binding IsPrimary}"
+                                Margin="5,0,0,0">
+                                <TextBlock Text="PRIMARY"/>
+                            </Border>
+                            <!-- Set Primary button for secondary targets -->
+                            <Button
+                                Grid.Column="2"
+                                Classes="outline"
+                                IsVisible="{Binding IsSecondary}"
+                                Command="{Binding SetAsPrimary}"
+                                Margin="5,0,0,0"
+                                Padding="5,2"
+                                FontSize="10">
+                                Set Primary
+                            </Button>
+                        </Grid>
+                    </DataTemplate>
+                </ContentControl.DataTemplates>
+            </ContentControl>
 
             <ScrollViewer Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
                 <ItemsControl 
