--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/WeaponSelectionPanel.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/WeaponSelectionPanel.axaml
@@ -44,46 +44,35 @@
                 DataContext="{Binding HeatProjection}"/>
 
             <!-- Selected Target Section -->
-            <ContentControl
+            
+            <StackPanel
+                DataContext="{Binding SelectedTarget}"
                 Grid.Row="2"
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
-                Margin="10,5,10,5"
-                Content="{Binding SelectedTarget}">
-                <ContentControl.DataTemplates>
-                    <DataTemplate x:DataType="wrappers:TargetSelectionViewModel">
-                        <Grid ColumnDefinitions="Auto,*,Auto">
-                            <TextBlock
-                                Grid.Column="0"
-                                Margin="0,0,5,0"
-                                FontFamily="{StaticResource AwesomeFontSolid}"
-                                Text="&#xf05b;"/>
-                            <TextBlock
-                                Grid.Column="1"
-                                Text="{Binding Name}"/>
-                            <!-- PRIMARY tag for primary target -->
-                            <Border
-                                Grid.Column="2"
-                                Classes="statusTag"
-                                IsVisible="{Binding IsPrimary}"
-                                Margin="5,0,0,0">
-                                <TextBlock Text="PRIMARY"/>
-                            </Border>
-                            <!-- Set Primary button for secondary targets -->
-                            <Button
-                                Grid.Column="2"
-                                Classes="outline"
-                                IsVisible="{Binding IsSecondary}"
-                                Command="{Binding SetAsPrimary}"
-                                Margin="5,0,0,0"
-                                Padding="5,2"
-                                FontSize="10">
-                                Set Primary
-                            </Button>
-                        </Grid>
-                    </DataTemplate>
-                </ContentControl.DataTemplates>
-            </ContentControl>
+                Margin="10,10,0,0"
+                Orientation="Horizontal" Spacing="5">
+                <TextBlock
+                    FontFamily="{StaticResource AwesomeFontSolid}"
+                    Text="&#xf05b;"/>
+                <TextBlock Text="{Binding Name}"/>
+                <Panel IsVisible="{Binding HasWeaponsForTarget}">
+                    <Border
+                        VerticalAlignment="Center"
+                        Classes="statusTag"
+                        IsVisible="{Binding IsPrimary}">
+                        <TextBlock Text="PRIMARY"/>
+                    </Border>
+                    <Button
+                        Classes="outline"
+                        IsVisible="{Binding IsSecondary}"
+                        Command="{Binding SetAsPrimary}"
+                        Padding="5,2"
+                        FontSize="10">
+                        Set Primary
+                    </Button>
+                </Panel>
+            </StackPanel>
 
             <ScrollViewer Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
                 <ItemsControl 
