fix: update available units table layout

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/TemplatedControls/GamePanel.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/TemplatedControls/GamePanel.axaml
@@ -12,8 +12,8 @@
                         BorderBrush="{StaticResource PrimaryBrush}"
                         BorderThickness="1"
                         CornerRadius="8"
-                        Width="300"
-                        Height="400"
+                        MinWidth="300"
+                        MinHeight="400"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Bottom"
                         Margin="10">
