--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/PlayersFragment.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/PlayersFragment.axaml
@@ -22,6 +22,7 @@
                     Classes="primary"
                     IsEnabled="{Binding CanAddPlayer}"/>
             <Button Content="Add Bot"
+                    x:Name="AddBotButton"
                     Command="{Binding AddBotCommand}"
                     Classes="primary"
                     IsEnabled="{Binding CanAddPlayer}"/>
