feat: ensure path destination is never null

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitMovementInfoPanel.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitMovementInfoPanel.axaml
@@ -75,7 +75,7 @@
                          HorizontalAlignment="Center"/>
                 <TextBlock Grid.Row="1" Grid.Column="2"
                          Classes="label"
-                         Text="{Binding MovementTaken.DistanceCovered}"
+                         Text="{Binding MovementTaken.HexesTraveled}"
                          HorizontalAlignment="Center"/>
             </Grid>
         </Border>
