--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/MapConfigFragment.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/MapConfigFragment.axaml
@@ -9,6 +9,7 @@
              x:DataType="viewModels1:MapConfigViewModel">
     <UserControl.Resources>
         <converters:AdaptiveGridConverter x:Key="AdaptiveGridConverter"/>
+        <converters:BoolToBrushConverter x:Key="BoolToBrushConverter"/>
     </UserControl.Resources>
     
     <TabControl SelectedIndex="{Binding SelectedTabIndex}">
@@ -28,7 +29,7 @@
                                         BorderThickness="2"
                                         Cursor="Hand"
                                         BorderBrush="{Binding IsSelected, 
-                                            Converter={x:Static converters:BoolToBrushConverter.Instance}}"
+                                            Converter={StaticResource BoolToBrushConverter}}"
                                         Background="#1A000000"
                                         PointerPressed="OnMapItemPressed">
                                     <StackPanel HorizontalAlignment="Center" Spacing="4">
