refactor: rename converter to reflect its purpose

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/MapConfigFragment.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/MapConfigFragment.axaml
@@ -9,7 +9,7 @@
              x:DataType="viewModels1:MapConfigViewModel">
     <UserControl.Resources>
         <converters:AdaptiveGridConverter x:Key="AdaptiveGridConverter"/>
-        <converters:BoolToBrushConverter x:Key="BoolToBrushConverter"/>
+        <converters:ISelectedItemToBrushConverter x:Key="BoolToBrushConverter"/>
     </UserControl.Resources>
     
     <TabControl SelectedIndex="{Binding SelectedTabIndex}">
